# swarm_middleware_sync

./: .gitignore  README.md  followAruco  install_dependencies.sh  log.txt  runPipe.sh  setup.bash
aruco_swarm/: CMakeLists.txt  config.json  followAruco.cpp  test.cpp
aruco_swarm/calib/: rpicamcalib.yaml  tello_camera.yaml  webcam.yaml
aruco_swarm/include/: aruco.h  drone_client.hpp  followArcuo.h
aruco_swarm/src/: aruco.cpp  drone_client.cc
aruco_swarm/tello_supllicants/: drone1.conf  drone2.conf  drone3.conf  drone4.conf
dev-test/: VCS.py  ap_connect.py  drone_input_test.py  liftoff.py  rpi_input_test.py  test.py
docker/: build_docker.sh  docker_password.txt  dockerfile  install_docker.sh  run_docker.sh
docs/: quick-start.md
examples/: drone_orientation_attitude.yaml  init_navigation.yaml  init_obstacles_drones.yaml  mission.yaml  navigation.yaml  obstacles_and_drone.yaml  operational_report.yaml  planned_mission.yaml  string.yaml  velocity.yaml
include/swarm_middleware_api/: node.hpp
integration/: CMakeLists.txt  ally_detection.cpp  location.cpp  test.cpp  test_2.cpp
integration/location/: CMakeLists.txt  location.cpp  test.cpp  vel_sender.cpp
integration/peer_detection/: CMakeLists.txt  peer_detection.cpp  peer_detection.hpp
messages_src/alate_interfaces/: CMakeLists.txt  package.xml
messages_src/alate_interfaces/msg/: AgentStatus.msg  AutopilotActionEnum.msg  AutopilotStateEnum.msg  Float.msg  HlcStateEnum.msg  LlcStatus.msg  McEnum.msg  PeerEnum.msg  RcEnum.msg  String.msg  Velocity.msg
messages_src/alate_interfaces/srv/: Autopilot.srv
messages_src/swarm_interfaces/: CMakeLists.txt  package.xml
messages_src/swarm_interfaces/msg/: AtmosphericConditions.msg  Drone.msg  DroneOrientationAndAttitude.msg  DroneSize.msg  GeoPoint.msg  InitNavigate.msg  InitObstaclesAndDrones.msg  Mission.msg  MissionTargetData.msg  MissionTypeEnum.msg  Navigation.msg  NavigationQualityEnum.msg  ObstaclesAndDrones.msg  OperationalReport.msg  PayloadCapability.msg  PlannedMission.msg  PlannedMissionV2.msg  RelativePoint.msg  SensorPixelPitchEnum.msg  SensorResolutionEnum.msg  SensorTypeEnum.msg  SensorUseEnum.msg  Target.msg  TargetSize.msg  TargetTypeEnum.msg  Zone.msg  ZoneShapeEnum.msg  ZoneTypeEnum.msg
messages_src/swarm_interfaces/srv/: FlightControl.srv  MissionPlanning.srv  Navigation.srv  ObstacleAvoidance.srv
runtime_lib/: libfastcdr.so.1
src/: CMakeLists.txt  working_with_interfaces_demo.cpp
